[package]
name = "cloudflare-ddns-updater"
version = "1.1.0"
edition = "2024"
authors = ["swarkin"]
description = "tiny applet to update Cloudflare DNS A records for your domain"
repository = "https://github.com/Swarkin/cloudflare-ddns-updater"
license = "MIT"
keywords = ["cloudflare", "ddns"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "3.0", features = ["rustls", "json"], default-features = false}
config = { version = "0.15", features = ["toml"], default-features = false }
dirs = "6.0"
toml = { version = "0.8", features = ["display"], default-features = false }

[profile.release]
strip = true
opt-level = "s"
lto = true
